03_Fase3_Generación_Código_Intermedio/Gramatica_v3Parser.py
# Generated from Gramatica_v3.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


# Módulo de Árbol Sintáctico - Lógica de Estructura G4


class Gramatica_v3Parser ( Parser ):

    grammarFileName = "Gramatica_v3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
                     "'=='", "<INVALID>", "'>'", "'<'", "'>='", "'<='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'='", "';'", 
                     "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'PROGRAMA'", 
                     "'INICIO'", "'FIN'", "'SI'", "'ENTONCES'", "'SINO'", 
                     "'MIENTRAS'", "'FOR'", "'IMPRIMIR'", "'RETORNAR'", 
                     "'IMPORT'", "'BREAK'", "'CONTINUE'", "'INT'", "'FLOAT'", 
                     "'STRING'", "'BOOL'", "'VOID'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "TK_SUMA", "TK_RESTA", "TK_MULT", "TK_DIV", 
                      "TK_MODULO", "TK_POTENCIA", "TK_IGUAL", "TK_DIFERENTE", 
                      "TK_MAYOR", "TK_MENOR", "TK_MAYOREQ", "TK_MENOREQ", 
                      "TK_Y", "TK_O", "TK_NOT", "ASSIGN", "SEMICOLON", "TK_COMA", 
                      "TK_PAR_IZQ", "TK_PAR_DER", "TK_LLA_IZQ", "TK_LLA_DER", 
                      "TK_COR_IZQ", "TK_COR_DER", "TK_PROGRAMA", "TK_INICIO", 
                      "TK_FIN", "TK_SI", "TK_ENTONCES", "TK_SINO", "TK_MIENTRAS", 
                      "TK_FOR", "TK_IMPRIMIR", "TK_RETURN", "TK_IMPORT", 
                      "TK_BREAK", "TK_CONTINUE", "TK_INT", "TK_FLOAT", "TK_STRING", 
                      "TK_BOOL", "TK_VOID", "TK_TRUE", "TK_FALSE", "TK_NUMERO", 
                      "TK_CADENA", "TK_ID", "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_importacion = 2
    RULE_varDeclaration = 3
    RULE_arrayLiteral = 4
    RULE_funcDeclaration = 5
    RULE_params = 6
    RULE_param = 7
    RULE_type = 8
    RULE_instruccion = 9
    RULE_bloque = 10
    RULE_asignacion_core = 11
    RULE_condicional = 12
    RULE_bucle_mientras = 13
    RULE_bucle_for = 14
    RULE_impresion = 15
    RULE_sentencia_return = 16
    RULE_expr = 17
    RULE_args = 18

    ruleNames =  [ "program", "declaration", "importacion", "varDeclaration", 
                   "arrayLiteral", "funcDeclaration", "params", "param", 
                   "type", "instruccion", "bloque", "asignacion_core", "condicional", 
                   "bucle_mientras", "bucle_for", "impresion", "sentencia_return", 
                   "expr", "args" ]

    EOF = Token.EOF
    TK_SUMA=1
    TK_RESTA=2
    TK_MULT=3
    TK_DIV=4
    TK_MODULO=5
    TK_POTENCIA=6
    TK_IGUAL=7
    TK_DIFERENTE=8
    TK_MAYOR=9
    TK_MENOR=10
    TK_MAYOREQ=11
    TK_MENOREQ=12
    TK_Y=13
    TK_O=14
    TK_NOT=15
    ASSIGN=16
    SEMICOLON=17
    TK_COMA=18
    TK_PAR_IZQ=19
    TK_PAR_DER=20
    TK_LLA_IZQ=21
    TK_LLA_DER=22
    TK_COR_IZQ=23
    TK_COR_DER=24
    TK_PROGRAMA=25
    TK_INICIO=26
    TK_FIN=27
    TK_SI=28
    TK_ENTONCES=29
    TK_SINO=30
    TK_MIENTRAS=31
    TK_FOR=32
    TK_IMPRIMIR=33
    TK_RETURN=34
    TK_IMPORT=35
    TK_BREAK=36
    TK_CONTINUE=37
    TK_INT=38
    TK_FLOAT=39
    TK_STRING=40
    TK_BOOL=41
    TK_VOID=42
    TK_TRUE=43
    TK_FALSE=44
    TK_NUMERO=45
    TK_CADENA=46
    TK_ID=47
    WS=48
    COMMENT=49
    BLOCK_COMMENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Gramatica_v3Parser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramG4Context(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_PROGRAMA(self):
            return self.getToken(Gramatica_v3Parser.TK_PROGRAMA, 0)
        def TK_ID(self):
            return self.getToken(Gramatica_v3Parser.TK_ID, 0)
        def TK_INICIO(self):
            return self.getToken(Gramatica_v3Parser.TK_INICIO, 0)
        def TK_FIN(self):
            return self.getToken(Gramatica_v3Parser.TK_FIN, 0)
        def EOF(self):
            return self.getToken(Gramatica_v3Parser.EOF, 0)
        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Gramatica_v3Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(Gramatica_v3Parser.DeclarationContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramG4" ):
                return visitor.visitProgramG4(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = Gramatica_v3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = Gramatica_v3Parser.ProgramG4Context(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(Gramatica_v3Parser.TK_PROGRAMA)
            self.state = 39
            self.match(Gramatica_v3Parser.TK_ID)
            self.state = 40
            self.match(Gramatica_v3Parser.TK_INICIO)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281473100316672) != 0):
                self.state = 41
                self.declaration()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(Gramatica_v3Parser.TK_FIN)
            self.state = 48
            self.match(Gramatica_v3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Gramatica_v3Parser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclImportG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def importacion(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.ImportacionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclImportG4" ):
                return visitor.visitDeclImportG4(self)
            else:
                return visitor.visitChildren(self)


    class DeclInstruccionG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def instruccion(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.InstruccionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclInstruccionG4" ):
                return visitor.visitDeclInstruccionG4(self)
            else:
                return visitor.visitChildren(self)


    class DeclVariableG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varDeclaration(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.VarDeclarationContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclVariableG4" ):
                return visitor.visitDeclVariableG4(self)
            else:
                return visitor.visitChildren(self)


    class DeclFuncionG4Context(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcDeclaration(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.FuncDeclarationContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclFuncionG4" ):
                return visitor.visitDeclFuncionG4(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = Gramatica_v3Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = Gramatica_v3Parser.DeclVariableG4Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.varDeclaration()
                pass

            elif la_ == 2:
                localctx = Gramatica_v3Parser.DeclFuncionG4Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.funcDeclaration()
                pass

            elif la_ == 3:
                localctx = Gramatica_v3Parser.DeclImportG4Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.importacion()
                pass

            elif la_ == 4:
                localctx = Gramatica_v3Parser.DeclInstruccionG4Context(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.instruccion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TK_IMPORT(self):
            return self.getToken(Gramatica_v3Parser.TK_IMPORT, 0)

        def TK_ID(self):
            return self.getToken(Gramatica_v3Parser.TK_ID, 0)

        def SEMICOLON(self):
            return self.getToken(Gramatica_v3Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Gramatica_v3Parser.RULE_importacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportacion" ):
                return visitor.visitImportacion(self)
            else:
                return visitor.visitChildren(self)




    def importacion(self):

        localctx = Gramatica_v3Parser.ImportacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(Gramatica_v3Parser.TK_IMPORT)
            self.state = 57
            self.match(Gramatica_v3Parser.TK_ID)
            self.state = 58
            self.match(Gramatica_v3Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Gramatica_v3Parser.RULE_varDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclarationG4Context(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.VarDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.TypeContext,0)

        def TK_ID(self):
            return self.getToken(Gramatica_v3Parser.TK_ID, 0)
        def SEMICOLON(self):
            return self.getToken(Gramatica_v3Parser.SEMICOLON, 0)
        def ASSIGN(self):
            return self.getToken(Gramatica_v3Parser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclarationG4" ):
                return visitor.visitVarDeclarationG4(self)
            else:
                return visitor.visitChildren(self)


    class VarArrayDeclarationG4Context(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.VarDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_INT(self):
            return self.getToken(Gramatica_v3Parser.TK_INT, 0)
        def TK_COR_IZQ(self):
            return self.getToken(Gramatica_v3Parser.TK_COR_IZQ, 0)
        def TK_COR_DER(self):
            return self.getToken(Gramatica_v3Parser.TK_COR_DER, 0)
        def TK_ID(self):
            return self.getToken(Gramatica_v3Parser.TK_ID, 0)
        def ASSIGN(self):
            return self.getToken(Gramatica_v3Parser.ASSIGN, 0)
        def arrayLiteral(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.ArrayLiteralContext,0)

        def SEMICOLON(self):
            return self.getToken(Gramatica_v3Parser.SEMICOLON, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarArrayDeclarationG4" ):
                return visitor.visitVarArrayDeclarationG4(self)
            else:
                return visitor.visitChildren(self)



    def varDeclaration(self):

        localctx = Gramatica_v3Parser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = Gramatica_v3Parser.VarDeclarationG4Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.type_()
                self.state = 61
                self.match(Gramatica_v3Parser.TK_ID)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16:
                    self.state = 62
                    self.match(Gramatica_v3Parser.ASSIGN)
                    self.state = 63
                    self.expr(0)


                self.state = 66
                self.match(Gramatica_v3Parser.SEMICOLON)
                pass

            elif la_ == 2:
                localctx = Gramatica_v3Parser.VarArrayDeclarationG4Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.match(Gramatica_v3Parser.TK_INT)
                self.state = 69
                self.match(Gramatica_v3Parser.TK_COR_IZQ)
                self.state = 70
                self.match(Gramatica_v3Parser.TK_COR_DER)
                self.state = 71
                self.match(Gramatica_v3Parser.TK_ID)
                self.state = 72
                self.match(Gramatica_v3Parser.ASSIGN)
                self.state = 73
                self.arrayLiteral()
                self.state = 74
                self.match(Gramatica_v3Parser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TK_COR_IZQ(self):
            return self.getToken(Gramatica_v3Parser.TK_COR_IZQ, 0)

        def TK_COR_DER(self):
            return self.getToken(Gramatica_v3Parser.TK_COR_DER, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Gramatica_v3Parser.ExprContext)
            else:
                return self.getTypedRuleContext(Gramatica_v3Parser.ExprContext,i)


        def TK_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(Gramatica_v3Parser.TK_COMA)
            else:
                return self.getToken(Gramatica_v3Parser.TK_COMA, i)

        def getRuleIndex(self):
            return Gramatica_v3Parser.RULE_arrayLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayLiteral" ):
                return visitor.visitArrayLiteral(self)
            else:
                return visitor.visitChildren(self)




    def arrayLiteral(self):

        localctx = Gramatica_v3Parser.ArrayLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(Gramatica_v3Parser.TK_COR_IZQ)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 272678884245504) != 0):
                self.state = 79
                self.expr(0)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 80
                    self.match(Gramatica_v3Parser.TK_COMA)
                    self.state = 81
                    self.expr(0)
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 89
            self.match(Gramatica_v3Parser.TK_COR_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Gramatica_v3Parser.RULE_funcDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDeclarationG4Context(FuncDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.FuncDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.TypeContext,0)

        def TK_ID(self):
            return self.getToken(Gramatica_v3Parser.TK_ID, 0)
        def TK_PAR_IZQ(self):
            return self.getToken(Gramatica_v3Parser.TK_PAR_IZQ, 0)
        def TK_PAR_DER(self):
            return self.getToken(Gramatica_v3Parser.TK_PAR_DER, 0)
        def bloque(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.BloqueContext,0)

        def params(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.ParamsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclarationG4" ):
                return visitor.visitFuncDeclarationG4(self)
            else:
                return visitor.visitChildren(self)



    def funcDeclaration(self):

        localctx = Gramatica_v3Parser.FuncDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDeclaration)
        self._la = 0 # Token type
        try:
            localctx = Gramatica_v3Parser.FuncDeclarationG4Context(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.type_()
            self.state = 92
            self.match(Gramatica_v3Parser.TK_ID)
            self.state = 93
            self.match(Gramatica_v3Parser.TK_PAR_IZQ)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8521215115264) != 0):
                self.state = 94
                self.params()


            self.state = 97
            self.match(Gramatica_v3Parser.TK_PAR_DER)
            self.state = 98
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Gramatica_v3Parser.ParamContext)
            else:
                return self.getTypedRuleContext(Gramatica_v3Parser.ParamContext,i)


        def TK_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(Gramatica_v3Parser.TK_COMA)
            else:
                return self.getToken(Gramatica_v3Parser.TK_COMA, i)

        def getRuleIndex(self):
            return Gramatica_v3Parser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = Gramatica_v3Parser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.param()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 101
                self.match(Gramatica_v3Parser.TK_COMA)
                self.state = 102
                self.param()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(Gramatica_v3Parser.TypeContext,0)


        def TK_ID(self):
            return self.getToken(Gramatica_v3Parser.TK_ID, 0)

        def getRuleIndex(self):
            return Gramatica_v3Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = Gramatica_v3Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.type_()
            self.state = 109
            self.match(Gramatica_v3Parser.TK_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Gramatica_v3Parser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TypeVoidG4Context(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_VOID(self):
            return self.getToken(Gramatica_v3Parser.TK_VOID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeVoidG4" ):
                return visitor.visitTypeVoidG4(self)
            else:
                return visitor.visitChildren(self)


    class TypeStringG4Context(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_STRING(self):
            return self.getToken(Gramatica_v3Parser.TK_STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeStringG4" ):
                return visitor.visitTypeStringG4(self)
            else:
                return visitor.visitChildren(self)


    class TypeBoolG4Context(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_BOOL(self):
            return self.getToken(Gramatica_v3Parser.TK_BOOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeBoolG4" ):
                return visitor.visitTypeBoolG4(self)
            else:
                return visitor.visitChildren(self)


    class TypeIntArrayG4Context(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Gramatica_v3Parser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TK_INT(self):
            return self.getToken(Gramatica_v3Parser.TK_INT, 0)
        def TK_COR_IZQ(self):
            return self.getToken(Gramatica_v3Parser.TK_COR_IZQ, 0)
        def TK_COR_DER(self):
            return self.getToken(Gramatica_v3Parser.TK_COR_DER, 0)
